{
  "version": 4,
  "terraform_version": "0.12.16",
  "serial": 195,
  "lineage": "b8e84e62-6322-883a-c29f-6c182a39f983",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "lb_ip",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.89.231.224",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2020-02-04T21:02:41.216-08:00",
            "id": "projects/udagram-kubernetes/regions/europe-west3/addresses/demo-lb-ip",
            "name": "demo-lb-ip",
            "network_tier": "PREMIUM",
            "project": "udagram-kubernetes",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/udagram-kubernetes/regions/europe-west3/addresses/demo-lb-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "common",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-02-04T21:02:41.368-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/udagram-kubernetes/global/firewalls/demo-common",
            "name": "demo-common",
            "network": "https://www.googleapis.com/compute/v1/projects/udagram-kubernetes/global/networks/demo",
            "priority": 1000,
            "project": "udagram-kubernetes",
            "self_link": "https://www.googleapis.com/compute/v1/projects/udagram-kubernetes/global/firewalls/demo-common",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "control_plane",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "6443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-02-04T21:02:41.274-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/udagram-kubernetes/global/firewalls/demo-control-plane",
            "name": "demo-control-plane",
            "network": "https://www.googleapis.com/compute/v1/projects/udagram-kubernetes/global/networks/demo",
            "priority": 1000,
            "project": "udagram-kubernetes",
            "self_link": "https://www.googleapis.com/compute/v1/projects/udagram-kubernetes/global/firewalls/demo-control-plane",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "internal",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2020-02-04T21:02:41.145-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/udagram-kubernetes/global/firewalls/demo-internal",
            "name": "demo-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/udagram-kubernetes/global/networks/demo",
            "priority": 1000,
            "project": "udagram-kubernetes",
            "self_link": "https://www.googleapis.com/compute/v1/projects/udagram-kubernetes/global/firewalls/demo-internal",
            "source_ranges": [
              "10.240.0.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "control_plane",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "creation_timestamp": "2020-02-04T21:03:14.954-08:00",
            "id": "projects/udagram-kubernetes/regions/europe-west3/forwardingRules/demo-apiserver",
            "ip_address": "34.89.231.224",
            "ip_protocol": "TCP",
            "load_balancing_scheme": "EXTERNAL",
            "name": "demo-apiserver",
            "network_tier": "PREMIUM",
            "port_range": "6443-6443",
            "project": "udagram-kubernetes",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/udagram-kubernetes/regions/europe-west3/forwardingRules/demo-apiserver",
            "target": "https://www.googleapis.com/compute/v1/projects/udagram-kubernetes/regions/europe-west3/targetPools/demo-control-plane"
          },
          "dependencies": [
            "google_compute_address.lb_ip",
            "google_compute_http_health_check.control_plane",
            "google_compute_instance.control_plane",
            "google_compute_network.network",
            "google_compute_subnetwork.subnet",
            "google_compute_target_pool.control_plane_pool"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "control_plane",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20200129a",
                    "size": 100,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/udagram-kubernetes/zones/europe-west3-a/disks/demo-control-plane-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/udagram-kubernetes/zones/europe-west3-a/instances/demo-control-plane-1",
            "instance_id": "5702305206337270380",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-2",
            "metadata": {
              "sshKeys": "root:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQCk7Pe5k3YRMn6R3dahPzfbp54vvkXD2UPT/hXGfRXJxTTW5ETjAb4ijAk4BLE6Jr08xLx4cbSMpuyGlgSEImMb9Wskp+Vl3+GNiaARVlHEQZ2OBTXGug8fu0tcL2/vBVYT4izW0S/7ctaoByiEZ9aEwmcbPKOviLhNdBW3QXoeERPweMgAVSvHmVeptAEpG3/pksCN+4VWdTGE7+389jAvZ22yxEAUi8EC4/SC6hYaJuaGg4Wv66Yw8Pr7+TgmtQTiEB4MEr8ZbalRpnYdOwYs8AErIYq69rQk0rqJk3Q58KB/eWZwoU+kYzGzL7jIP21pgo9a4K00VnMNx2mC7Yzn pieter@bat\n"
            },
            "metadata_fingerprint": "Ti_bpsFAUPI=",
            "name": "demo-control-plane-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.234.110.225",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/udagram-kubernetes/global/networks/demo",
                "network_ip": "10.240.0.4",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/udagram-kubernetes/regions/europe-west3/subnetworks/demo-subnet",
                "subnetwork_project": "udagram-kubernetes"
              }
            ],
            "project": "udagram-kubernetes",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/udagram-kubernetes/zones/europe-west3-a/instances/demo-control-plane-1",
            "service_account": [
              {
                "email": "992999684751-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol"
                ]
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-west3-a"
          },
          "dependencies": [
            "google_compute_network.network",
            "google_compute_subnetwork.subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20200129a",
                    "size": 100,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/udagram-kubernetes/zones/europe-west3-b/disks/demo-control-plane-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/udagram-kubernetes/zones/europe-west3-b/instances/demo-control-plane-2",
            "instance_id": "5250529175702860396",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-2",
            "metadata": {
              "sshKeys": "root:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQCk7Pe5k3YRMn6R3dahPzfbp54vvkXD2UPT/hXGfRXJxTTW5ETjAb4ijAk4BLE6Jr08xLx4cbSMpuyGlgSEImMb9Wskp+Vl3+GNiaARVlHEQZ2OBTXGug8fu0tcL2/vBVYT4izW0S/7ctaoByiEZ9aEwmcbPKOviLhNdBW3QXoeERPweMgAVSvHmVeptAEpG3/pksCN+4VWdTGE7+389jAvZ22yxEAUi8EC4/SC6hYaJuaGg4Wv66Yw8Pr7+TgmtQTiEB4MEr8ZbalRpnYdOwYs8AErIYq69rQk0rqJk3Q58KB/eWZwoU+kYzGzL7jIP21pgo9a4K00VnMNx2mC7Yzn pieter@bat\n"
            },
            "metadata_fingerprint": "Ti_bpsFAUPI=",
            "name": "demo-control-plane-2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.89.214.66",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/udagram-kubernetes/global/networks/demo",
                "network_ip": "10.240.0.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/udagram-kubernetes/regions/europe-west3/subnetworks/demo-subnet",
                "subnetwork_project": "udagram-kubernetes"
              }
            ],
            "project": "udagram-kubernetes",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/udagram-kubernetes/zones/europe-west3-b/instances/demo-control-plane-2",
            "service_account": [
              {
                "email": "992999684751-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol"
                ]
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-west3-b"
          },
          "dependencies": [
            "google_compute_network.network",
            "google_compute_subnetwork.subnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20200129a",
                    "size": 100,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/udagram-kubernetes/zones/europe-west3-c/disks/demo-control-plane-3"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/udagram-kubernetes/zones/europe-west3-c/instances/demo-control-plane-3",
            "instance_id": "4639829210403697260",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-2",
            "metadata": {
              "sshKeys": "root:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQCk7Pe5k3YRMn6R3dahPzfbp54vvkXD2UPT/hXGfRXJxTTW5ETjAb4ijAk4BLE6Jr08xLx4cbSMpuyGlgSEImMb9Wskp+Vl3+GNiaARVlHEQZ2OBTXGug8fu0tcL2/vBVYT4izW0S/7ctaoByiEZ9aEwmcbPKOviLhNdBW3QXoeERPweMgAVSvHmVeptAEpG3/pksCN+4VWdTGE7+389jAvZ22yxEAUi8EC4/SC6hYaJuaGg4Wv66Yw8Pr7+TgmtQTiEB4MEr8ZbalRpnYdOwYs8AErIYq69rQk0rqJk3Q58KB/eWZwoU+kYzGzL7jIP21pgo9a4K00VnMNx2mC7Yzn pieter@bat\n"
            },
            "metadata_fingerprint": "Ti_bpsFAUPI=",
            "name": "demo-control-plane-3",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.198.175.3",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/udagram-kubernetes/global/networks/demo",
                "network_ip": "10.240.0.3",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/udagram-kubernetes/regions/europe-west3/subnetworks/demo-subnet",
                "subnetwork_project": "udagram-kubernetes"
              }
            ],
            "project": "udagram-kubernetes",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/udagram-kubernetes/zones/europe-west3-c/instances/demo-control-plane-3",
            "service_account": [
              {
                "email": "992999684751-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol"
                ]
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-west3-c"
          },
          "dependencies": [
            "google_compute_network.network",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/udagram-kubernetes/global/networks/demo",
            "name": "demo",
            "project": "udagram-kubernetes",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/udagram-kubernetes/global/networks/demo"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-02-04T21:02:41.415-08:00",
            "gateway_address": "10.240.0.1",
            "id": "projects/udagram-kubernetes/regions/europe-west3/subnetworks/demo-subnet",
            "ip_cidr_range": "10.240.0.0/24",
            "name": "demo-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/udagram-kubernetes/global/networks/demo",
            "private_ip_google_access": false,
            "project": "udagram-kubernetes",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/udagram-kubernetes/regions/europe-west3/subnetworks/demo-subnet"
          },
          "dependencies": [
            "google_compute_network.network"
          ]
        }
      ]
    }
  ]
}